--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -176,13 +176,13 @@
   border: 2px solid #f5f5f5;
   height: 180px;
   border-radius: 8px;
-  padding: 32px 24px 16px;
+  padding: 24px 24px 16px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-
+  margin-bottom: 15px;
   text-align: center;
 
   cursor: pointer;
@@ -190,7 +190,7 @@
 
 .items-grid li span {
   flex: 1;
-  margin-top: 12px;
+  margin-top: 8px;
 
   display: flex;
   align-items: center;
@@ -200,6 +200,11 @@
 .items-grid li.selected {
   background: #e1faec;
   border: 2px solid #34cb79;
+}
+
+.items-grid li img {
+  width: 90%;
+  height: 90%;
 }
 
 .dialogText {
