--- a/web/src/pages/FindPoint/styles.css
+++ b/web/src/pages/FindPoint/styles.css
@@ -1,7 +1,7 @@
 #page-find {
   height: 100vh;
   background: url("../../assets/home-background.svg") no-repeat center;
-  background-color: #d1cece;
+  background-color: #f0f0f5;
 }
 
 #page-find .content {
@@ -58,7 +58,8 @@
   justify-content: space-around;
 }
 
-.items-grid li {
+.items-grid .point {
+  text-decoration: none;
   background: #f5f5f5;
   border: 2px solid #f5f5f5;
   height: 100%;
@@ -73,11 +74,11 @@
   text-align: center;
 }
 
-.items-grid li img {
+.items-grid .point img {
   height: 150px;
 }
 
-.items-grid li span {
+.items-grid .point span {
   flex: 1;
   margin-top: 12px;
 
@@ -87,12 +88,12 @@
   color: var(--title-color);
 }
 
-.items-grid li p {
+.items-grid .point p {
   color: var(--text-color);
   margin-top: 5px;
   font-size: 14px;
 }
-.items-grid li .items-text {
+.items-grid .point .items-text {
   margin-top: 10px;
   font-size: 18px;
   color: var(--title-color);
